--- a/windows_integration/security_package/Cargo.toml
+++ b/windows_integration/security_package/Cargo.toml
@@ -24,7 +24,7 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-appender = "0.2"
 tracing-subscriber.workspace = true
-kanidm_windows = { path = "../security_package_lib" }
+kanidm_windows = { path = "../public" }
 
 [dependencies.windows]
 version = "0.48"
