--- a/windows_integration/security_package/Cargo.toml
+++ b/windows_integration/security_package/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kanidm_win_authlib"
+name = "kanidm_windows_client"
 description = "Kanidm Windows Client"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
