--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -47,7 +47,7 @@ url = { workspace = true }
 uuid = { workspace = true }
 yew = { workspace = true, features = ["csr"] }
 yew-router = { workspace = true }
-time.workspace = true
+time = { workspace = true }
 
 
 [dependencies.web-sys]
