--- a/server/web_ui/pkg/package.json
+++ b/server/web_ui/pkg/package.json
@@ -5,7 +5,7 @@
     "James Hodgkinson <james@terminaloutcomes.com>"
   ],
   "description": "Kanidm Server Web User Interface",
-  "version": "1.1.0-alpha.12",
+  "version": "1.1.0-beta.13",
   "license": "MPL-2.0",
   "repository": {
     "type": "git",
@@ -18,5 +18,7 @@
   ],
   "module": "kanidmd_web_ui.js",
   "homepage": "https://github.com/kanidm/kanidm/",
-  "sideEffects": false
+  "sideEffects": [
+    "./snippets/*"
+  ]
 }
