--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,8 +115,8 @@ reqwest = { version = "0.11.18", default-features = false, features=["cookies", 
 rpassword = "^7.2.0"
 rusqlite = "^0.28.0"
 
-scim_proto = "^0.1.1"
-# scim_proto = { path = "../scim/proto", version = "0.1.1" }
+# scim_proto = "^0.1.1"
+scim_proto = { path = "../scim/proto", version = "^0.2.0" }
 # scim_proto = { git = "https://github.com/kanidm/scim.git", version = "0.1.1" }
 
 serde = "^1.0.163"
