CI change to catch this in future, updating SCIM req

--- a/.github/workflows/wasm_test.yml
+++ b/.github/workflows/wasm_test.yml
@@ -44,5 +44,6 @@ jobs:
 
       # docs here:
       # https://rustwasm.github.io/docs/wasm-bindgen/wasm-bindgen-test/browsers.html
+      - run: make webui
       - run: wasm-pack test --headless --chrome
         continue-on-error: true
