--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           mdbook-version: "latest"
 
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
@@ -49,6 +50,7 @@ jobs:
 
       - name: Build the docs
         run: |
+          cargo install mdbook-template
           cargo doc --no-deps
           mdbook build *book
           rm -rf ./docs/
