--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,6 +119,7 @@ scim_proto = "^0.2.0"
 # scim_proto = { path = "../scim/proto", version = "^0.2.0" }
 # scim_proto = { git = "https://github.com/kanidm/scim.git", version = "0.1.1" }
 
+selinux = "^0.4.1"
 serde = "^1.0.163"
 serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.96"
