Adding mdbook-template back for bookgen (#1660)
* adding mdbook-template back

--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Build the docs
         run: |
+          cargo install mdbook-template
           cargo doc --no-deps
           mdbook build *book
           rm -rf ./docs/
