SELinux support for kanidm-unixd-tasks daemon (#1661)
* selinux is an optional feature
* unix_integration: add selinux config option

On SELinux systems, this setting controls whether SELinux relabeling of
newly created home directories should be performed. The default value of
this is on (even on non-SELinux systems), but the tasks daemon will
perform an additional runtime check for SELinux support and will disable
this feature automatically if this check fails.

* unix_integration: wire up home dir selinux labeling
* unix_integration: create equivalence rules in SELinux policy for aliases
* book: document selinux setting
* Add myself to CONTRIBUTORS.md

Signed-off-by: Kenton Groombridge <concord@gentoo.org>

--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -14,6 +14,7 @@ repository.workspace = true
 [features]
 default = ["unix"]
 unix = []
+selinux = ["dep:selinux"]
 
 [[bin]]
 name = "kanidm_unixd"
@@ -55,6 +56,7 @@ r2d2.workspace = true
 r2d2_sqlite.workspace = true
 rpassword.workspace = true
 rusqlite.workspace = true
+selinux = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 sketching.workspace = true
