--- a/examples/server_container.toml
+++ b/examples/server_container.toml
@@ -102,6 +102,10 @@ origin = "https://idm.example.com:8443"
 # schedule = "00 22 * * *"
 #    four times a day at 3 minutes past the hour, every 6th hours
 # schedule = "03 */6 * * *"
+#   We also support non standard cron syntax, with the following format:
+#   sec  min   hour   day of month   month   day of week   year
+#   (it's very similar to the standard cron syntax, it just allows to specify the seconds
+#   at the beginning and the year at the end)
 #   Number of backups to keep (default 7)
 # versions = 7
 #
