--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,56 +4,57 @@ lto = "thin"
 
 [workspace]
 members = [
-    "proto",
-    "tools/cli",
-    "tools/iam_migrations/freeipa",
-    "tools/orca",
-    "unix_integration",
-    "unix_integration/nss_kanidm",
-    "unix_integration/pam_kanidm",
-    "server/web_ui",
-    "server/daemon",
-    "server/lib",
-    "server/lib-macros",
-    "server/core",
-    "server/testkit",
-    "server/testkit-macros",
-    "libs/client",
-    "libs/crypto",
-    "libs/file_permissions",
-    "libs/profiles",
-    "libs/sketching"
+  "proto",
+  "tools/cli",
+  "tools/iam_migrations/freeipa",
+  "tools/orca",
+  "unix_integration",
+  "unix_integration/nss_kanidm",
+  "unix_integration/pam_kanidm",
+  "server/web_ui",
+  "server/daemon",
+  "server/lib",
+  "server/lib-macros",
+  "server/core",
+  "server/testkit",
+  "server/testkit-macros",
+  "libs/client",
+  "libs/crypto",
+  "libs/file_permissions",
+  "libs/profiles",
+  "libs/sketching",
 ]
 
 [workspace.package]
-version = "1.1.0-beta.13-dev"
 authors = [
-    "William Brown <william@blackhats.net.au>",
-    "James Hodgkinson <james@terminaloutcomes.com>",
-    ]
-rust-version = "1.66"
+  "William Brown <william@blackhats.net.au>",
+  "James Hodgkinson <james@terminaloutcomes.com>",
+]
 edition = "2021"
-license = "MPL-2.0"
 homepage = "https://github.com/kanidm/kanidm/"
+license = "MPL-2.0"
 repository = "https://github.com/kanidm/kanidm/"
+rust-version = "1.66"
+version = "1.1.0-beta.13-dev"
 
 [workspace.dependencies]
+async-recursion = "1.0.4"
 async-trait = "^0.1.68"
 base32 = "^0.4.0"
 base64 = "^0.21.0"
 base64urlsafedata = "0.1.3"
 bytes = "^1.3.0"
-clap = { version = "^3.2", features = ["derive"] }
+clap = {version = "^3.2", features = ["derive"]}
 clap_complete = "^3.2.5"
 # Forced by saffron/cron
 chrono = "^0.4.24"
-compact_jwt = { version = "^0.2.3", default-features = false }
+compact_jwt = {version = "^0.2.3", default-features = false}
 # compact_jwt = { path = "../compact_jwt" }
 concread = "^0.4.1"
 # concread = { path = "../concread" }
+criterion = "^0.4.0"
 cron = "0.12.0"
 crossbeam = "0.8.1"
-criterion = "^0.4.0"
 csv = "1.2.1"
 dialoguer = "0.10.4"
 dyn-clone = "^1.0.11"
@@ -62,25 +63,25 @@ filetime = "^0.2.21"
 fs2 = "^0.4.3"
 futures = "^0.3.28"
 futures-concurrency = "^3.1.0"
-futures-util = { version = "^0.3.21", features = ["sink"] }
+futures-util = {version = "^0.3.21", features = ["sink"]}
 gloo = "^0.8.0"
 gloo-net = "0.2.6"
-hashbrown = { version = "0.13.2", features = ["serde", "inline-more", "ahash"] }
+hashbrown = {version = "0.13.2", features = ["serde", "inline-more", "ahash"]}
 hex = "^0.4.3"
 http-types = "^2.12.0"
 idlset = "^0.2.4"
 # idlset = { path = "../idlset" }
 js-sys = "^0.3.63"
-kanidmd_core = { path = "./server/core" }
-kanidmd_idm = { path = "./server/idm" }
-kanidmd_lib = { path = "./server/lib" }
-kanidmd_lib_macros = { path = "./server/lib-macros" }
-kanidm_lib_crypto = { path = "./libs/crypto" }
-kanidm_lib_file_permissions = { path = "./libs/file_permissions" }
-kanidmd_testkit = { path = "./server/testkit" }
-kanidm_client = { path = "./libs/client", version = "1.1.0-alpha.11" }
-kanidm_proto = { path = "./proto", version = "1.1.0-alpha.11" }
-kanidm_unix_int = { path = "./unix_integration" }
+kanidm_client = {path = "./libs/client", version = "1.1.0-alpha.11"}
+kanidm_lib_crypto = {path = "./libs/crypto"}
+kanidm_lib_file_permissions = {path = "./libs/file_permissions"}
+kanidm_proto = {path = "./proto", version = "1.1.0-alpha.11"}
+kanidm_unix_int = {path = "./unix_integration"}
+kanidmd_core = {path = "./server/core"}
+kanidmd_idm = {path = "./server/idm"}
+kanidmd_lib = {path = "./server/lib"}
+kanidmd_lib_macros = {path = "./server/lib-macros"}
+kanidmd_testkit = {path = "./server/testkit"}
 last-git-commit = "0.2.0"
 # REMOVE this
 lazy_static = "^1.4.0"
@@ -98,20 +99,20 @@ libsqlite3-sys = "^0.25.0"
 lru = "^0.8.0"
 mathru = "^0.13.0"
 num_enum = "^0.5.11"
-oauth2_ext = { version = "^4.1.0", package = "oauth2", default-features = false }
-openssl-sys = "^0.9"
+oauth2_ext = {version = "^4.1.0", package = "oauth2", default-features = false}
 openssl = "^0.10.52"
+openssl-sys = "^0.9"
 paste = "^1.0.12"
 pkg-config = "^0.3.27"
 proc-macro2 = "1.0.58"
-profiles = { path = "./libs/profiles" }
+profiles = {path = "./libs/profiles"}
 qrcode = "^0.12.0"
 quote = "1"
 r2d2 = "^0.8.9"
 r2d2_sqlite = "^0.21.0"
 rand = "^0.8.5"
 regex = "1.8.3"
-reqwest = { version = "0.11.18", default-features = false, features=["cookies", "json", "gzip", "native-tls"] }
+reqwest = {version = "0.11.18", default-features = false, features = ["cookies", "json", "gzip", "native-tls"]}
 rpassword = "^7.2.0"
 rusqlite = "^0.28.0"
 
@@ -121,21 +122,21 @@ scim_proto = "^0.2.0"
 
 selinux = "^0.4.1"
 serde = "^1.0.163"
-serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
-serde_json = "^1.0.96"
 serde-wasm-bindgen = "0.4"
+serde_cbor = {version = "0.12.0-dev", package = "serde_cbor_2"}
+serde_json = "^1.0.96"
 shellexpand = "^2.1.2"
-sketching = { path = "./libs/sketching" }
+sketching = {path = "./libs/sketching"}
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
 sshkeys = "^0.3.1"
-syn = { version = "2.0.16", features = ["full"] }
-testkit-macros = { path = "./server/testkit-macros" }
+syn = {version = "2.0.16", features = ["full"]}
+testkit-macros = {path = "./server/testkit-macros"}
 tide = "^0.16.0"
 # Including brotli *very* slow, so don't do that. Including the "default" feature pulls a mime-type list from the internet on build, which isn't used.
-tide-compress = { version="0.10.6", default-features = false, features = [ "gzip", "regex-check" ] }
+tide-compress = {version = "0.10.6", default-features = false, features = ["gzip", "regex-check"]}
 tide-openssl = "^0.1.1"
-time = { version = "^0.3.21", features = ["formatting", "local-offset"] }
+time = {version = "^0.3.21", features = ["formatting", "local-offset"]}
 
 tikv-jemallocator = "0.5"
 
@@ -146,11 +147,11 @@ tokio-util = "^0.7.8"
 toml = "^0.5.11"
 touch = "^0.0.1"
 # tracing = { version = "^0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
-tracing = { version = "^0.1.37" }
-tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
+tracing = {version = "^0.1.37"}
+tracing-subscriber = {version = "^0.3.17", features = ["env-filter"]}
 
 # tracing-forest = { path = "/Users/william/development/tracing-forest/tracing-forest" }
-tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest.git", rev = "77daf8c8abf010b87d45ece2bf656983c6f8cecb" }
+tracing-forest = {git = "https://github.com/QnnOkabayashi/tracing-forest.git", rev = "77daf8c8abf010b87d45ece2bf656983c6f8cecb"}
 
 url = "^2.3.1"
 urlencoding = "2.1.2"
@@ -169,9 +170,9 @@ webauthn-rs-proto = "0.4.8"
 # webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
 # webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
 # webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
+walkdir = "2"
 web-sys = "^0.3.62"
 whoami = "^1.4.0"
-walkdir = "2"
 
 yew = "^0.20.0"
 yew-router = "^0.17.0"
