--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -79,16 +79,19 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: docs
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Extract the files
         run: |
-          cp book/index_redirect.html docs/index.html
           find . -name '*.tar.gz' -exec tar zxf "{}" \;
           ls -la docs/
           cd docs && \
           ln -s ${{ needs.generate_tags.outputs.latest}}/ stable && \
           cd ..
+          cp book/index_redirect.html docs/index.html
           ls -la docs/
 
       - name: Upload artifact
