--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -40,6 +40,7 @@ toml = {workspace = true}
 tracing = { workspace = true, features = ["attributes"] }
 urlencoding.workspace = true
 uuid = { workspace = true, features = ["serde", "v4" ] }
+once_cell = "1.18.0"
 
 [build-dependencies]
 profiles = { workspace = true }
