Automatically login & reauth (#1691)
* Automatically login & reauth
* Revert automatical format by vscode
* Only ask user to choose username once
* Use dialoguer::Confirm; fix logic

--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -30,6 +30,7 @@ name = "kanidm_ssh_authorizedkeys_direct"
 path = "src/ssh_authorizedkeys.rs"
 
 [dependencies]
+async-recursion.workplace = true
 clap = { workspace = true, features = ["derive", "env"] }
 compact_jwt = { workspace = true, features = ["openssl"] }
 dialoguer.workspace = true
