--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ homepage = "https://github.com/kanidm/kanidm/"
 repository = "https://github.com/kanidm/kanidm/"
 
 [workspace.dependencies]
+async-recursion = "1.0.4"
 async-trait = "^0.1.68"
 base32 = "^0.4.0"
 base64 = "^0.21.0"
