--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -96,7 +96,7 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Extract the files
         run: |
-          find . -name '*.tar.gz' -exec tar zxf "{}" \;
+          find . -name '*.tar.gz' -ls -exec tar zxf "{}" \;
           ls -la docs/
           cd docs && \
           ln -s ${{ needs.pre_deploy.outputs.latest}}/ stable && \
