--- a/platform/debian/kanidm-unixd/rules
+++ b/platform/debian/kanidm-unixd/rules
@@ -52,6 +52,7 @@ override_dh_systemd_start:
 
 override_dh_auto_install:
 	mkdir -p ${BINDIR}
+	mkdir -p ${PAMDIR}
 	mkdir -p ${LIBDIR}/security
 	install \
 		-g root -o root \
