Declare when no applications are available

--- a/server/web_ui/pkg/package.json
+++ b/server/web_ui/pkg/package.json
@@ -18,7 +18,5 @@
   ],
   "module": "kanidmd_web_ui.js",
   "homepage": "https://github.com/kanidm/kanidm/",
-  "sideEffects": [
-    "./snippets/*"
-  ]
+  "sideEffects": false
 }
