--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -95,7 +95,7 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Extract the files
         run: |
-          find . -name '*.tar.gz' -ls -exec tar zxvf "{}" \;
+          find . -name '*.tar.gz' -ls -exec tar zxvf "{}" \; 1>&2
       - name: Check the docs
         run: |
           ls -la docs/
