--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -90,7 +90,7 @@ jobs:
         run: |
           pwd
           find $(pwd) -ls
-          find $(pwd) '*.tar.gz' -ls -exec tar zxvf "{}" \;
+          find $(pwd) -name *.tar.gz' -ls -exec tar zxvf "{}" \;
           mkdir -p docs
           cd docs
           cp -R "$(git branch -a  | awk '{print $1}' | sort -t. -k3n,3 -k4n,4 | awk -F'/' '{print $NF}' | tail -n1)/" stable
