--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argon2.workspace = true
 base64.workspace = true
 base64urlsafedata.workspace = true
 hex.workspace = true
