--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -3,6 +3,9 @@ name = "kanidm_lib_crypto"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+tpm = ["dep:tss-esapi"]
+
 [dependencies]
 argon2.workspace = true
 base64.workspace = true
@@ -17,6 +20,7 @@ openssl.workspace = true
 rand.workspace = true
 serde = { workspace = true, features = ["derive"] }
 tracing.workspace = true
+tss-esapi = { workspace = true, optional = true }
 
 [dev-dependencies]
 sketching.workspace = true
