--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -15,6 +15,7 @@ repository.workspace = true
 default = ["unix"]
 unix = []
 selinux = ["dep:selinux"]
+tpm = ["dep:tss-esapi", "kanidm_lib_crypto/tpm"]
 
 [[bin]]
 name = "kanidm_unixd"
@@ -66,6 +67,7 @@ toml.workspace = true
 tokio = { workspace = true, features = ["rt", "fs", "macros", "sync", "time", "net", "io-util"] }
 tokio-util = { workspace = true, features = ["codec"] }
 tracing.workspace = true
+tss-esapi = { workspace = true, optional = true }
 reqwest = { workspace = true, default-features = false }
 walkdir.workspace = true
 
