--- a/platform/opensuse/kanidm-unixd.service
+++ b/platform/opensuse/kanidm-unixd.service
@@ -8,6 +8,7 @@ After=chronyd.service ntpd.service network-online.target
 
 [Service]
 DynamicUser=yes
+SupplementaryGroups=tss
 UMask=0027
 CacheDirectory=kanidm-unixd
 RuntimeDirectory=kanidm-unixd
