--- a/server/web_ui/pkg/package.json
+++ b/server/web_ui/pkg/package.json
@@ -18,5 +18,7 @@
   ],
   "module": "kanidmd_web_ui.js",
   "homepage": "https://github.com/kanidm/kanidm/",
-  "sideEffects": false
+  "sideEffects": [
+    "./snippets/*"
+  ]
 }
