--- a/libs/profiles/Cargo.toml
+++ b/libs/profiles/Cargo.toml
@@ -5,13 +5,13 @@ documentation = "https://docs.rs/kanidm/latest/kanidm/"
 # We do not have tests in this pkg
 autotests = false
 
-version.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-edition.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
+version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [lib]
 name = "profiles"
@@ -19,8 +19,8 @@ path = "src/lib.rs"
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
-toml.workspace = true
-base64.workspace = true
+toml = { workspace = true }
+base64 = { workspace = true }
 
 [build-dependencies]
-base64.workspace = true
+base64 = { workspace = true }
