--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -3,31 +3,31 @@ name = "kanidm_proto"
 description = "Kanidm Protocol Bindings for serde"
 documentation = "https://docs.rs/kanidm_proto/latest/kanidm_proto/"
 
-version.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-edition.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
+version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [features]
 wasm = ["webauthn-rs-proto/wasm"]
 
 
 [dependencies]
-base32.workspace = true
-base64urlsafedata.workspace = true
-num_enum.workspace = true
-scim_proto.workspace = true
+base32 = { workspace = true }
+base64urlsafedata = { workspace = true }
+num_enum = { workspace = true }
+scim_proto = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
+serde_json = { workspace = true }
 time = { workspace = true, features = ["serde", "std"] }
-tracing.workspace = true
+tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
-urlencoding.workspace = true
+urlencoding = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
-webauthn-rs-proto.workspace = true
+webauthn-rs-proto = { workspace = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-last-git-commit.workspace = true
+last-git-commit = { workspace = true }
