--- a/tools/iam_migrations/ldap/Cargo.toml
+++ b/tools/iam_migrations/ldap/Cargo.toml
@@ -3,39 +3,39 @@ name = "kanidm-ldap-sync"
 description = "Kanidm Client Tools"
 documentation = "https://kanidm.github.io/kanidm/stable/"
 
-version.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-edition.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
+version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [dependencies]
-base64urlsafedata.workspace = true
+base64urlsafedata = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
-chrono.workspace = true
-cron.workspace = true
-kanidm_client.workspace = true
-kanidm_proto.workspace = true
+chrono = { workspace = true }
+cron = { workspace = true }
+kanidm_client = { workspace = true }
+kanidm_proto = { workspace = true }
 tokio = { workspace = true, features = ["rt", "macros", "net"] }
-tracing.workspace = true
+tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
 
-ldap3_client.workspace = true
+ldap3_client = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
-toml.workspace = true
+serde_json = { workspace = true }
+toml = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde"] }
 
 # For file metadata, should this me moved out?
-kanidmd_lib.workspace = true
+kanidmd_lib = { workspace = true }
 
 [target.'cfg(target_family = "unix")'.dependencies]
-users.workspace = true
+users = { workspace = true }
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
-clap_complete.workspace = true
+clap_complete = { workspace = true }
