--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -3,13 +3,13 @@ name = "kanidm_unix_int"
 description = "Kanidm Unix Integration Clients"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
-version.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-edition.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
+version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [features]
 default = ["unix"]
@@ -42,40 +42,40 @@ name = "kanidm_unix_common"
 path = "src/lib.rs"
 
 [dependencies]
-bytes.workspace = true
+bytes = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
-csv.workspace = true
-futures.workspace = true
-libc.workspace = true
-libsqlite3-sys.workspace = true
-lru.workspace = true
-kanidm_client.workspace = true
-kanidm_proto.workspace = true
-kanidm_lib_crypto.workspace = true
-kanidm_lib_file_permissions.workspace = true
-notify-debouncer-full.workspace = true
-rpassword.workspace = true
-rusqlite.workspace = true
+csv = { workspace = true }
+futures = { workspace = true }
+libc = { workspace = true }
+libsqlite3-sys = { workspace = true }
+lru = { workspace = true }
+kanidm_client = { workspace = true }
+kanidm_proto = { workspace = true }
+kanidm_lib_crypto = { workspace = true }
+kanidm_lib_file_permissions = { workspace = true }
+notify-debouncer-full = { workspace = true }
+rpassword = { workspace = true }
+rusqlite = { workspace = true }
 selinux = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
-sketching.workspace = true
+serde_json = { workspace = true }
+sketching = { workspace = true }
 
-toml.workspace = true
+toml = { workspace = true }
 tokio = { workspace = true, features = ["rt", "fs", "macros", "sync", "time", "net", "io-util"] }
 tokio-util = { workspace = true, features = ["codec"] }
-tracing.workspace = true
+tracing = { workspace = true }
 tss-esapi = { workspace = true, optional = true }
 reqwest = { workspace = true, default-features = false }
-walkdir.workspace = true
+walkdir = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
-users.workspace = true
+users = { workspace = true }
 
 [dev-dependencies]
-kanidmd_core.workspace = true
+kanidmd_core = { workspace = true }
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
-clap_complete.workspace = true
-profiles.workspace = true
+clap_complete = { workspace = true }
+profiles = { workspace = true }
