--- a/server/daemon/Cargo.toml
+++ b/server/daemon/Cargo.toml
@@ -3,13 +3,13 @@ name = "daemon"
 description = "Kanidm Server Daemon"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
-version.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-edition.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
+version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
+edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,27 +18,28 @@ name = "kanidmd"
 path = "src/main.rs"
 
 [dependencies]
-kanidm_proto.workspace = true
-kanidmd_core.workspace = true
-kanidm_lib_file_permissions.workspace = true
-sketching.workspace = true
-fs2.workspace = true
+kanidm_proto = { workspace = true }
+kanidmd_core = { workspace = true }
+kanidm_lib_file_permissions = { workspace = true }
+sketching = { workspace = true }
+fs2 = { workspace = true }
 
 clap = { workspace = true, features = ["env"] }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
 toml = { workspace = true }
+is-terminal = "0.4.7"
 
 [target.'cfg(target_family = "windows")'.dependencies]
-whoami.workspace = true
+whoami = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
-users.workspace = true
-tikv-jemallocator.workspace = true
+users = { workspace = true }
+tikv-jemallocator = { workspace = true }
 
 [build-dependencies]
 serde = { workspace = true, features = ["derive"] }
 clap = { workspace = true, features = ["derive"] }
-clap_complete.workspace = true
-profiles.workspace = true
+clap_complete = { workspace = true }
+profiles = { workspace = true }
