--- a/.github/workflows/wasm_test.yml
+++ b/.github/workflows/wasm_test.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Check arch
+        run: |
+          uname -a
       - name: Install dependencies
         run: |
           sudo apt-get update &&
