--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: install curl
+        run: |
+          sudo apt-get install -y curl
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       - name: Install wasm-pack
