--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v3
       - name: install curl
         run: |
-          apt-get install -y curl
+          apt-get update && apt-get install -y curl
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       - name: Install wasm-pack
