--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -14,7 +14,7 @@ name: "Github Pages - Branch"
 env:
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
-
+  ACTIONS_RUNNER_DEBUG: true
 jobs:
   generate_mdbook:
     runs-on: ubuntu-latest
@@ -71,9 +71,13 @@ jobs:
         run: |
           tar czvf ${{ inputs.tag }}.tar.gz ./docs/
 
+        env:
+          ACTIONS_RUNNER_DEBUG: true
       - name: Upload artifact
         # https://github.com/actions/upload-artifact
         uses: actions/upload-artifact@v3
         with:
           name: individual
           path: ${{inputs.tag }}.tar.gz
+        env:
+          ACTIONS_RUNNER_DEBUG: true
