--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -19,41 +19,46 @@ permissions:
   statuses: read
   pages: write
 
+env:
+  ACTIONS_RUNNER_DEBUG: true
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  generate_tags:
+  pre_deploy:
     runs-on: ubuntu-latest
     outputs:
-      tags: ${{ steps.tags.outputs.tags}}
-      latest: ${{ steps.previoustag.outputs.tag }}
+      latest: ${{ steps.branchname.outputs.latest }}
     steps:
-      - id: tags
-        name: pull tags
-        uses: oraad/get-tags-action@v1.0.0
-        with:
-          repo: ${{ github.repository }}
-          limit: 100
-          github-token: ${{ github.token }}
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: 'Get Previous tag'
-        id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      - name: Latest branch
+        run: |
+          echo "latest=$(git branch -a  | awk '{print $1}' | sort -t. -k3n,3 -k4n,4 | awk -F'/' '{print $NF}' | tail -n1)" >> $GITHUB_OUTPUT
+        id: branchname
+      - name: Move redirector page
+        run: |
+          mkdir docs
+          cp book/index_redirect.html ./docs/index.html
+          find ./docs > docs/manifest.txt
+      - name: Upload redirector artifact
+        # https://github.com/actions/upload-artifact
+        uses: actions/upload-artifact@v3
         with:
-          prefix: v1
+          name: base
+          path: docs/index.html
+
   fanout:
     uses: './.github/workflows/kanidm_individual_book.yml'
-    needs: generate_tags
+    needs: pre_deploy
 
     strategy:
       fail-fast: false
       matrix:
-        # tag: ${{ fromJson(needs.generate_tags.outputs.tags) }}
         tag:
-          - ${{ needs.generate_tags.outputs.latest}}
+          - ${{ needs.pre_deploy.outputs.latest}}
     with:
       tag: ${{ matrix.tag }}
       parent_id: ${{ github.ref }}
@@ -67,34 +72,61 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
-
     needs:
+      - pre_deploy
       - fanout
       - docs_master
-      - generate_tags
     runs-on: ubuntu-latest
     steps:
-      - name: Download previously built docs
-        uses: actions/download-artifact@v3
-        with:
-          name: docs
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+      - name: Download base artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: base
+          path: ./docs/
+        env:
+          ACTIONS_RUNNER_DEBUG: true
+      - name: Download individual artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: individual
+          path: ./docs/
+        env:
+          ACTIONS_RUNNER_DEBUG: true
+      # - name: Log more stuff
+      #   run: |
+      #     echo "Currently in $(pwd)"
+      #     mkdir -p docs && find $(pwd) -ls > ./docs/manifest.txt
+      #   env:
+      #     ACTIONS_RUNNER_DEBUG: true
+      # - name: Upload docs dir as an artifact
+      #   # https://github.com/actions/upload-artifact
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: logs
+      #     path: docs/
       - name: Extract the files
         run: |
-          find . -name '*.tar.gz' -exec tar zxf "{}" \;
+          pwd
+          echo "doing find $(pwd) -ls maxdepth 2"
+          find $(pwd) -ls -maxdepth 2
+          echo "doing find tar.gz ls"
+          find $(pwd) -name '*.tar.gz' -ls
+          echo "extracting"
+          find $(pwd) -name '*.tar.gz' -ls -exec tar zxvf "{}" \;
+          echo "Carrying on..."
+          mkdir -p docs
+          cd docs && cp -R "$(git branch -a  | awk '{print $1}' | sort -t. -k3n,3 -k4n,4 | awk -F'/' '{print $NF}' | tail -n1)/" stable && cd ..
           ls -la docs/
-          cd docs && \
-          ln -s ${{ needs.generate_tags.outputs.latest}}/ stable && \
-          cd ..
-          cp book/index_redirect.html docs/index.html
-          ls -la docs/
-
-      - name: Upload artifact
+          echo "Cleaning up docs archives"
+          rm docs/*.tar.gz
+        env:
+          ACTIONS_RUNNER_DEBUG: true
+      - name: Upload pages artifacts
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
@@ -102,3 +134,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
